[feat] - обновить данные и интерфейс преподавателей
